# tmp_lab1_func

./: CMakeLists.txt  main.cpp  text.cpp  text.h  Стандарты кодирования.docx
tests_1/: Unit_test.cpp  Unit_test.h  input_add3R.txt  input_error4.txt
